@@ -55,17 +55,24 @@ static int getPathLen(direntry_t *entry)
 	}
 }
 
-static char *sprintPwd(direntry_t *entry, char *ptr)
+static char *sprintPwd(direntry_t *entry, char *ptr, size_t *len_available)
 {
 	if(entry->entry == -3) {
 		*ptr++ = getDrive(entry->Dir);
 		*ptr++ = ':';
 		*ptr++ = '/';
+		(*len_available) -= 3;
 	} else {
-		ptr = sprintPwd(getDirentry(entry->Dir), ptr);
-		if(ptr[-1] != '/')
+		size_t bytes_converted;
+		ptr = sprintPwd(getDirentry(entry->Dir), ptr, len_available);
+		if(ptr[-1] != '/') {
 			*ptr++ = '/';
-		ptr += wchar_to_native(entry->name, ptr, MAX_VNAMELEN);
+			(*len_available)--;
+		}
+		bytes_converted = wchar_to_native(entry->name, ptr,
+						  MAX_VNAMELEN, *len_available);
+		ptr += bytes_converted;
+		(*len_available) -= bytes_converted;
 	}
 	return ptr;		
 }
@@ -96,7 +103,7 @@ static void _fprintPwd(FILE *f, direntry_t *entry, int recurs, int escape)
 			}
 		} else {
 			char tmp[4*MAX_VNAMELEN+1];
-			wchar_to_native(entry->name,tmp,MAX_VNAMELEN);
+			WCHAR_TO_NATIVE(entry->name,tmp,MAX_VNAMELEN);
 			fprintf(f, "/%s", tmp);
 		}
 	}
@@ -143,12 +150,14 @@ char *getPwd(direntry_t *entry)
 	int size;
 	char *ret;
 	char *end;
+	size_t buf_size;
 
 	size = getPathLen(entry);
-	ret = malloc(size*4+1);
+	buf_size = size*4+1;
+	ret = malloc(buf_size);
 	if(!ret)
 		return 0;
-	end = sprintPwd(entry, ret);
+	end = sprintPwd(entry, ret, &buf_size);
 	*end = '\0';
 	return ret;
 }
